--- a/src/pages/QnaPage.css
+++ b/src/pages/QnaPage.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  padding-top: 60px;
+  padding-top: 140px;
 }
 
 .qna-card {
@@ -11,6 +11,7 @@
   width: 90%;
   background-color: #fff;
   padding: 2rem;
+  padding-right: 4rem;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
