--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -3,8 +3,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.6rem 1.5rem;
-  background-color: #2e2e2e; /* 고정 배너색 */
-  color: black;              /* 고정 텍스트색 */
+  background-color: #2e2e2e;
+  color: black;
   position: fixed;
   top: 0;
   left: 0;
@@ -31,7 +31,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-  margin-left: auto; /* 오른쪽 정렬 */
+  margin-left: auto;
 }
 
 .nav-right a {
@@ -45,7 +45,6 @@
   opacity: 0.7;
 }
 
-/* 공통 버튼 텍스트 색 고정 */
 button {
   color: black;
 }
